--- a/practica-js/ejemplo12-async-await---axios-fetch/funciona/index.html
+++ b/practica-js/ejemplo12-async-await---axios-fetch/funciona/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
 
-<div class="flex-container">
+<button id="nombre">Obtener nombres</button>
+<div class="resultado" hidden="hidden">
 	<!-- Codigo js -->
 </div>
-<form>
-	<input type="hidden" name="data" class="key-data">
-	<input type="submit" name="data" value="comprar">	
-</form>
 
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="script.js"></script>
 
 </body>
-</html> 
+</html> 	
