agregado de archivos

--- a/practica-js/ejemplo14-reloj/index.html
+++ b/practica-js/ejemplo14-reloj/index.html
@@ -8,15 +8,12 @@
 </head>
 <body>
 
-<div>Elegir archivos JSON
-	<input type="file" id="archivo" multiple>
+<div class="reloj">
+	<div class="hora">00</div>
+	<div class="min">00</div>
+	<div class="seg">00</div>
 </div>
-<div>Elegir imagenes
-	<input type="file" id="img" multiple>
-	<div class="resultado">
-		<!--Imagenes aca-->
-	</div>
-</div>
+
 <script src="script.js"></script>
 
 </body>
