--- a/practica-js/ejemplo15-localStorage-ej/index.html
+++ b/practica-js/ejemplo15-localStorage-ej/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
 
-<div>Elegir archivos JSON
-	<input type="file" id="archivo" multiple>
-</div>
-<div>Elegir imagenes
-	<input type="file" id="img" multiple>
-	<div class="resultado">
-		<!--Imagenes aca-->
+<div class="modal-overlay">
+	<div class="modal">
+		<h2>¿En que idioma queres visualizar la pagina?</h2>
+		<button class="en">Ingles</button><button class="es">Español</button>
 	</div>
 </div>
+
 <script src="script.js"></script>
 
 </body>
