--- a/practica-js/ejemplo16-drag&drop/index.html
+++ b/practica-js/ejemplo16-drag&drop/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
 
-<div>Elegir archivos JSON
-	<input type="file" id="archivo" multiple>
+<div class="texturas">
+	<div class="textura1"></div>
+	<div class="textura2"></div>
+	<div class="textura3"></div>
 </div>
-<div>Elegir imagenes
-	<input type="file" id="img" multiple>
-	<div class="resultado">
-		<!--Imagenes aca-->
-	</div>
-</div>
+<div class="zona"></div>
+
 <script src="script.js"></script>
 
 </body>
